--- a/blockmanipulation.html
+++ b/blockmanipulation.html
@@ -94,7 +94,9 @@
         </div>
       </div>
     </div>
-    <div class="container"></div>
+    <div class="output">
+      <div id="block"></div>
+    </div>
     <script src="/script.js"></script>
   </body>
 </html>
